# tidy

./: .gitignore  Cargo.nix  Cargo.toml  Lease.toml  README.md  flake.nix  justfile  test_cfg.json
.github/workflows/: release.yml  test.yml
src/: main.rs
src/libcond/: action.rs  condition.rs  error.rs  field_value.rs  get_field.rs  lexer.rs  lib.rs  parser.rs  rule.rs
src/libcond/syntax/: condition.rs  expression.rs  field.rs  identifier.rs  literal.rs  mod.rs  operator.rs
src/libcond/tests/: mod.rs  test_condition.rs  test_field_value.rs  virtual_document.rs
src/tidy/: engine.rs  file.rs  manifest.rs  mod.rs  monitor.rs  monitor_thread.rs
src/tidy/actions/: delete.rs  mod.rs
