[package]
name = "tidy"
version = "0.3.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libcond"
path = "src/libcond/lib.rs"

[[bin]]
name = "tidy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0.26", features = ["derive"]}
env_logger = "0.9"
futures = "0.3"
lexical-core = "0.8.5"
log = "0.4"
nom = "7.1.1"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.88"
snafu = "0.7"
parse_duration = "2.1.1"
shellexpand = "2.1.2"
tokio = {version = "1", features = ["full"]}
walkdir = "2"

[package.metadata.deb.systemd-units]
